# fintrack

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  playwright.config.ts  tsconfig.json
api/: Dockerfile  pyproject.toml  pytest.ini
api/app/: dependencies.py  main.py
api/app/core/: config.py  database.py  logging.py  security.py
api/app/models/: __init__.py  account.py  budget.py  category.py  credit_card.py  credit_line.py  document.py  institution.py  loan.py  notification.py  push_subscription.py  recurring_transaction.py  statement.py  transaction.py  user.py
api/app/routers/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  credit_cards.py  credit_lines.py  dashboard.py  documents.py  institutions.py  notifications.py  parse.py  recurring_transactions.py  statements.py  transactions.py
api/app/schemas/: account.py  analytics.py  auth.py  budget.py  category.py  credit_card.py  credit_line.py  dashboard.py  document.py  institution.py  notification.py  parse.py  push_subscription.py  recurring_transaction.py  (+2 more)
api/migrations/: env.py
api/tests/: conftest.py  test_accounts.py  test_analytics.py  test_auth.py  test_budgets.py  test_categories.py  test_credit_card_service.py  test_credit_cards.py  test_credit_lines.py  test_dashboard.py  test_discord.py  test_documents.py  test_health.py  test_institutions.py  test_notifications.py  test_parse.py  test_parse_endpoints.py  test_prompt.py  test_recurring_transactions.py  test_security.py  test_statement_alerts.py  test_statements.py  test_transactions.py
(+198 files in other folders)
